# ctfd-archive-generator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
example/: config.yaml
example/challenges/: web.yaml  welcome.yaml
src/: index.py  pkgroot.py
src/ctfarchive/: __init__.py
src/static/: alembic_version.json  config.json
