[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ctfd_archive_generator"
version = "0.0.1"
authors = [
  { name="Ryoto Saito", email="ryoto.no.address@gmail.com" },
]
description = "CTFd archive generator"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ryotosaito/ctfd_archive_generator"
"Bug Tracker" = "https://github.com/ryotosaito/ctfd_archive_generator/issues"

[project.scripts]
ctfarchive = "index:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
static = ["*.json"]
