[metadata]
name = ctfd_archive_generator
version = 0.0.1

[options]
include_package_data = True
install_requires =
    requests
    importlib-metadata; python_version >= "3.9"
    pyyaml
    passlib

[options.package_data]
static =
    *.json

[options.entry_points]
console_scripts =
    ctfarchive = index:main